css/style.css
body {
    background-image: url(https://www.technocrazed.com/wp-content/uploads/2015/12/HD-Space-Wallpaper-For-Background-36.jpg);
    background-size: cover;
    margin: auto;
    display: grid;
    place-items: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

#space {
    height: 100px;
    width: 800px;
}

#bottomspace {
    height: 200px;
    width: 800px;
}

#start {
    font-family: 'Share Tech Mono', monospace;
    font-size: 60px;
    background-color: blue;
    color: white;
    border: none;
    height: 120px;
    width: 405px;
    place-items: center;
    transform: translate(0%, 158%) ;
}

#game-screen {
    margin: -75px;
    background: grey;
    align-content: center;
    align-items: center;
    justify-content: center;
    width: 500px;
    height: 800px;
    border: 10px darkgray solid;
    border-radius: 10px;
    /* margin: 5px; */
}

#image-box {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 40px auto;
}

#image {
    border: 5px black solid;
    background: #595959; /* Old browsers */
    background: -moz-linear-gradient(-45deg, #595959 -1%, #666666 -1%, #2c2c2c -1%, #4c4c4c 0%, #595959 0%, #666666 0%, #666666 0%, #2c2c2c 0%, #000000 1%, #2c2c2c 2%, #2c2c2c 2%, #000000 4%, #1c1c1c 7%, #1c1c1c 7%, #131313 18%, #131313 18%, #2b2b2b 27%, #2b2b2b 27%, #111111 60%); /* FF3.6-15 */
    background: -webkit-linear-gradient(-45deg, #595959 -1%,#666666 -1%,#2c2c2c -1%,#4c4c4c 0%,#595959 0%,#666666 0%,#666666 0%,#2c2c2c 0%,#000000 1%,#2c2c2c 2%,#2c2c2c 2%,#000000 4%,#1c1c1c 7%,#1c1c1c 7%,#131313 18%,#131313 18%,#2b2b2b 27%,#2b2b2b 27%,#111111 60%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(135deg, #595959 -1%,#666666 -1%,#2c2c2c -1%,#4c4c4c 0%,#595959 0%,#666666 0%,#666666 0%,#2c2c2c 0%,#000000 1%,#2c2c2c 2%,#2c2c2c 2%,#000000 4%,#1c1c1c 7%,#1c1c1c 7%,#131313 18%,#131313 18%,#2b2b2b 27%,#2b2b2b 27%,#111111 60%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    border-radius: 5px;
    width: 400px;
    height: 300px;
}

#round {
    margin: 5px;
    font-family: 'Share Tech Mono', monospace;
    width: 50px;
    background-color: #cc99cc;
    border-radius: 20px;
    text-indent: 20px;

    
    
}

#score {
    margin: 5px;
    font-family: 'Share Tech Mono', monospace;
    width: 50px;
    background-color: #9699cc;
    border-radius: 20px;
    text-indent: 20px;
}








#question-box {
    margin: 40px;
    background: #595959; /* Old browsers */
    background: -moz-linear-gradient(-45deg, #595959 -1%, #666666 -1%, #2c2c2c -1%, #4c4c4c 0%, #595959 0%, #666666 0%, #666666 0%, #2c2c2c 0%, #000000 1%, #2c2c2c 2%, #2c2c2c 2%, #000000 4%, #1c1c1c 7%, #1c1c1c 7%, #131313 18%, #131313 18%, #2b2b2b 27%, #2b2b2b 27%, #111111 60%); /* FF3.6-15 */
    background: -webkit-linear-gradient(-45deg, #595959 -1%,#666666 -1%,#2c2c2c -1%,#4c4c4c 0%,#595959 0%,#666666 0%,#666666 0%,#2c2c2c 0%,#000000 1%,#2c2c2c 2%,#2c2c2c 2%,#000000 4%,#1c1c1c 7%,#1c1c1c 7%,#131313 18%,#131313 18%,#2b2b2b 27%,#2b2b2b 27%,#111111 60%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(135deg, #595959 -1%,#666666 -1%,#2c2c2c -1%,#4c4c4c 0%,#595959 0%,#666666 0%,#666666 0%,#2c2c2c 0%,#000000 1%,#2c2c2c 2%,#2c2c2c 2%,#000000 4%,#1c1c1c 7%,#1c1c1c 7%,#131313 18%,#131313 18%,#2b2b2b 27%,#2b2b2b 27%,#111111 60%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    background-color: black;
    height: 350px;
    width: 400px;
    border: 10px black solid;
    border-radius: 5px;
}

#quesroundscore {
    display: flex;
    margin: 20px;
}

#roundscore {
    display: flex;
    margin: -10px 250px;
}

#answer-box {
    margin: 50px;
    display: grid;
}

.answer {
    padding: 5px;
    font-family: 'Share Tech Mono', monospace;
    font-weight: bolder;
    background-color: lightpink;
    font-size: 18px;
    border-radius: 30px;
    height: 50px;
    border: none;
    margin: 17px 0 0 0;
    color: black;
}

#question {
    margin: 18px -20px;
    position: absolute;
    font-family: 'Share Tech Mono', monospace;
    font-size: 23px;
    width: 400px;
    text-align: center;
    color: white;
    grid-area: 'question';
}

#answer1 {
    background-color: #cc6699;
    grid-area: 'answer1';
}

#answer2 {
    background-color: #cc99cc;
    grid-area: 'answer2';
}

#answer3 {
    background-color: #ff9900;
    grid-area: 'answer3';
}

#answer4 {
    background-color: #9966ff;
    grid-area: 'answer4';
}

#bottom-row {
    font-family: 'Share Tech Mono', monospace;
    display: flex;
    margin: -53px;
}

#timer {
    font-family: 'Share Tech Mono', monospace;
    background-color: #cc6699;
    width: 100px;
    border-radius: 30px;
    text-align: center;
    font-size: 20px;
    vertical-align: middle;
    height: 20px;
    padding: 5px;
    margin: 22px;
}
#dark-mode {
    font-family: 'Share Tech Mono', monospace;
    font-weight: bolder;
    width: 100px;
    height: 30px;
    margin: 22px;
    background-color: #ff9900;
    border-radius: 30px;
    border: none;
}

#restart {
    margin: 22px;
    font-family: 'Share Tech Mono', monospace;
    background-color: #9699cc;
    border-radius: 30px;
    border: none;
    width: 100px;
    height: 30px;
    visibility: "visible";
}

